# Context-Admission-Control

./: .gitignore  AUDIT_NOTES.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  FULL_MANIFEST.json  FULL_MANIFEST.md  LICENSE  MANIFEST.json  MANIFEST.md  PACKAGE_NOTES.md  README.md  RELEASE_CHECKLIST.md  ROW_COUNTS.json  ROW_COUNTS.md  SECURITY.md  START_HERE.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/decision_risk/: answers.py  export_llm_eval_prompts.py  generate.py  llm_eval.py  plot.py  profiles.py  run.py  score.py
benchmarks/decision_risk_human_rewrite/: __init__.py  rewrite.py  run.py
benchmarks/decision_risk_stress/: __init__.py  run.py
benchmarks/llm_runner/: analyze_results.py  caller.py  judge.py  run.py  run_production_stress_battery.ps1
benchmarks/renewal_risk/: generate_dossiers.py  plot.py  run.py  score.py
cac/baselines/: naive_rag.py
cac/core/: builder.py  expansion.py  packet.py  reporting.py  retrieval.py  schemas.py  slots.py  valuation.py
examples/: acme_demo.py
outputs/llm_eval_budget_crunch/: judge_eval.csv  judge_report.md  judge_summary.csv  llm_answer_eval.csv  llm_answer_summary.csv  llm_eval_report.md  model_answers.jsonl  prompts.jsonl
outputs/llm_eval_clean_signal/: judge_eval.csv  judge_report.md  judge_summary.csv  llm_answer_eval.csv  llm_answer_summary.csv  llm_eval_report.md  model_answers.jsonl  (+1 more)
tests/: run_smoke_tests.py  test_exact_wording_fallback.py  test_llm_eval_harness.py  test_no_gold_admission.py  test_plot_outputs.py  test_release_hygiene.py  test_rewrite_and_stress_smoke.py  test_row_count.py
(+48 files in other folders)
